--- a/ActionBar-PullToRefresh/build.gradle
+++ b/ActionBar-PullToRefresh/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-    compile 'com.github.castorflex.smoothprogressbar:library:0.4.+@aar'
+    compile 'com.github.castorflex.smoothprogressbar:library:0.4.0@aar'
 }
 
 android {
