--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile files('libs/gson-2.2.4.jar')
     compile project(':FloatingActionButton')
     compile project(':ActionBar-PullToRefresh')
+    compile project(':materialish-progress')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.loopj.android:android-async-http:1.4.5'
 }
