--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':ActionBar-PullToRefresh', ':Crouton', ':FloatingActionButton'
+include ':app', ':ActionBar-PullToRefresh', ':Crouton', ':FloatingActionButton',':materialish-progress'
