--- a/Crouton/build.gradle
+++ b/Crouton/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.library'
 android {
-    buildToolsVersion '20.0.0'
-    compileSdkVersion 21
+    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 21
+        targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
     }
 }
