--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 project.archivesBaseName = "cnBeta"
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "20.0.0"
+    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     def verName = "1.0"
     String buildDate = " Build " + new Date().format("yyyyMMddhhmmss")
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         applicationId "com.ywwxhz.cnbetareader"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
         versionCode 1
         versionName verName + buildDate
     }
