--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,18 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.ywwxhz.app.MyApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.ywwxhz.app.MyApplication"
         android:theme="@style/Theme.Basic">
         <activity
-            android:name="com.ywwxhz.app.NewsListActivity"
             android:configChanges="screenSize|keyboardHidden|orientation"
-            android:theme="@style/Theme.Basic.NoAnim"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:name="com.ywwxhz.app.NewsListActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/Theme.Basic.NoAnim">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,15 +26,21 @@
             </intent-filter>
         </activity>
         <activity
+            android:configChanges="screenSize|keyboardHidden|orientation"
             android:name="com.ywwxhz.app.NewsDetailActivity"
-            android:configChanges="screenSize|keyboardHidden|orientation" />
+            android:screenOrientation="sensorPortrait" />
         <activity
+            android:configChanges="screenSize|keyboardHidden|orientation"
             android:name="com.ywwxhz.app.NewsCommentActivity"
-            android:configChanges="screenSize|keyboardHidden|orientation" />
+            android:screenOrientation="sensorPortrait" />
         <activity
+            android:configChanges="screenSize|keyboardHidden|orientation"
             android:label="@string/settings"
             android:name="com.ywwxhz.app.SettingsActivity"
-            android:configChanges="screenSize|keyboardHidden|orientation" />
+            android:screenOrientation="sensorPortrait" />
+        <activity android:name="com.ywwxhz.app.MediaActivity"
+            android:theme="@style/Theme.Basic.Video"
+            android:configChanges="screenSize|keyboardHidden|orientation"/>
     </application>
 
 </manifest>
