--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
             android:configChanges="screenSize|keyboardHidden|orientation"
             android:label="@string/app_name"
             android:name="com.ywwxhz.app.NewsListActivity"
-            android:screenOrientation="sensorPortrait"
             android:theme="@style/Theme.Basic.NoAnim">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,17 +26,14 @@
         </activity>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
-            android:name="com.ywwxhz.app.NewsDetailActivity"
-            android:screenOrientation="sensorPortrait" />
+            android:name="com.ywwxhz.app.NewsDetailActivity"/>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
-            android:name="com.ywwxhz.app.NewsCommentActivity"
-            android:screenOrientation="sensorPortrait" />
+            android:name="com.ywwxhz.app.NewsCommentActivity"/>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
             android:label="@string/settings"
-            android:name="com.ywwxhz.app.SettingsActivity"
-            android:screenOrientation="sensorPortrait" />
+            android:name="com.ywwxhz.app.SettingsActivity"/>
         <activity android:name="com.ywwxhz.app.MediaActivity"
             android:theme="@style/Theme.Basic.Video"
             android:configChanges="screenSize|keyboardHidden|orientation"/>
