--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,6 @@ dependencies {
     compile project(':materialish-progress')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.loopj.android:android-async-http:1.4.6'
-    compile 'com.squareup.picasso:picasso:2.4.0'
     compile files('libs/jsoup-1.8.1.jar')
+    compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
 }
