--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
             android:label="@string/app_name"
-            android:name="com.ywwxhz.app.NewsListActivity"
+            android:name="com.ywwxhz.activitys.NewsListActivity"
             android:theme="@style/Theme.Basic.NoAnim">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,18 +26,18 @@
         </activity>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
-            android:name="com.ywwxhz.app.NewsDetailActivity"/>
+            android:name="com.ywwxhz.activitys.NewsDetailActivity"/>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
-            android:name="com.ywwxhz.app.NewsCommentActivity"/>
+            android:name="com.ywwxhz.activitys.NewsCommentActivity"/>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
             android:label="@string/settings"
-            android:name="com.ywwxhz.app.SettingsActivity"/>
+            android:name="com.ywwxhz.activitys.SettingsActivity"/>
         <activity
             android:configChanges="screenSize|keyboardHidden|orientation"
             android:theme="@style/Theme.Basic.Image"
-            android:name="com.ywwxhz.app.ImageViewActivity"/>
+            android:name="com.ywwxhz.activitys.ImageViewActivity"/>
     </application>
 
 </manifest>
