--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ android {
     compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
-    def verName = "1.0.5"
+    def verName = "1.0.6"
     String buildDate = " Build " + new Date().format("yyyyMMddHHmmss")
 
     defaultConfig {
         applicationId "com.ywwxhz.cnbetareader"
         minSdkVersion 15
         targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
-        versionCode 6
+        versionCode 7
         versionName verName + buildDate
         resConfigs "zh-rCN"
         resConfigs "nodpi", "hdpi", "xhdpi", "xxhdpi", "xxxhdpi"
@@ -37,6 +37,12 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        releasePreview {
             signingConfig signingConfigs.release
             minifyEnabled true
             shrinkResources true
@@ -72,4 +78,5 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile project(':android-support-v4-preferencefragment')
+    compile project(':SwipeBackLayout')
 }
