--- a/SwipeBackLayout/build.gradle
+++ b/SwipeBackLayout/build.gradle
@@ -8,4 +8,9 @@ android {
         minSdkVersion 14
         targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
