1.add news image share. 2.add slide to change image. 3.add comment copy. long press comment item to copy.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,5 @@ dependencies {
     compile project(':android-support-v4-preferencefragment')
     compile project(':SwipeBackLayout')
     compile project(':SuperSaiyanScrollView')
+    compile project(':FilterMenu')
 }
