--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,20 +18,46 @@ android {
         resConfigs "nodpi", "hdpi", "xhdpi", "xxhdpi", "xxxhdpi"
     }
 
-
     signingConfigs {
-        release {
-            storeFile file(System.getenv("KEY_STROE_FILE"))
-            storePassword System.getenv("KEY_STROE_PASSWORD")
-            keyAlias System.getenv("KEY_ALIAS_RELEASE")
-            keyPassword System.getenv("KEY_PASSWORD")
+        release
+        debug
+    }
+
+    def propFile = file('../signing.properties')
+
+    if (System.getenv("KEY_STROE_FILE") != null
+            && System.getenv("KEY_STROE_PASSWORD") != null
+            && System.getenv("KEY_ALIAS_RELEASE") != null
+            && System.getenv("KEY_PASSWORD") != null
+            && System.getenv("KEY_ALIAS_DEBUG") != null) {
+        println "\nload signingConfigs form System Environment variables"
+        def keyStoreFile = file(System.getenv("KEY_STROE_FILE"))
+        android.signingConfigs.release.storeFile =  keyStoreFile
+        android.signingConfigs.release.storePassword =  System.getenv("KEY_STROE_PASSWORD")
+        android.signingConfigs.release.keyAlias = System.getenv("KEY_ALIAS_RELEASE")
+        android.signingConfigs.release.keyPassword = System.getenv("KEY_PASSWORD")
+        android.signingConfigs.debug.storeFile = keyStoreFile
+        android.signingConfigs.debug.storePassword = System.getenv("KEY_STROE_PASSWORD")
+        android.signingConfigs.debug.keyAlias = System.getenv("KEY_ALIAS_DEBUG")
+        android.signingConfigs.debug.keyPassword = System.getenv("KEY_PASSWORD")
+    } else if (propFile.canRead()) {
+        println "\nload signingConfigs form signing.properties"
+        def Properties p = new Properties()
+        p.load(new FileInputStream(propFile))
+        if (p != null
+                && p.containsKey('KEY_STROE_FILE')
+                && p.containsKey('KEY_STROE_PASSWORD')
+                && p.containsKey('KEY_ALIAS')
+                && p.containsKey('KEY_PASSWORD')
+        ) {
+            android.signingConfigs.release.storeFile = file(p['KEY_STROE_FILE'])
+            android.signingConfigs.release.storePassword = p['KEY_STROE_PASSWORD']
+            android.signingConfigs.release.keyAlias = p['KEY_ALIAS']
+            android.signingConfigs.release.keyPassword = p['KEY_PASSWORD']
         }
-        debug {
-            storeFile file(System.getenv("KEY_STROE_FILE"))
-            storePassword System.getenv("KEY_STROE_PASSWORD")
-            keyAlias System.getenv("KEY_ALIAS_DEBUG")
-            keyPassword System.getenv("KEY_PASSWORD")
-        }
+
+    } else {
+        println "\nsigningConfigs: Required properties in System Environment variables or signing.properties are missing"
     }
 
     buildTypes {
@@ -49,7 +75,7 @@ android {
         }
         debug {
             applicationIdSuffix '.debug'
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -80,8 +106,8 @@ android {
             variant.mergeResources.doLast {
                 def values = file("${buildDir}/intermediates/res/${variant.dirName}/values/values.xml")
                 String content = values.getText(encoding)
-                content = content.replaceAll("cnBeta Plus( Dev)?","cnBeta Plus Dev")
-                values.write(content,encoding)
+                content = content.replaceAll("cnBeta Plus( Dev)?", "cnBeta Plus Dev")
+                values.write(content, encoding)
             }
         }
     }
@@ -93,7 +119,7 @@ android {
                 def outputFile = output.outputFile
                 if (outputFile != null && outputFile.name.endsWith('.apk')) {
                     def fileName = outputFile.name.replace(".apk"
-                            , "-${defaultConfig.versionName}-${defaultConfig.versionCode}.apk".replaceAll(" ","-"))
+                            , "-${defaultConfig.versionName}-${defaultConfig.versionCode}.apk".replaceAll(" ", "-"))
                     output.outputFile = new File(outputFile.parent, fileName)
                 }
             }
@@ -120,4 +146,5 @@ dependencies {
     compile project(':SwipeBackLayout')
     compile project(':SuperSaiyanScrollView')
     compile project(':FilterMenu')
+    compile project(':MaterialRipple')
 }
