1.replace photoview to subscaleview 2.add gif support 3.update gradle plugin to 1.2.3 and gradle wrapper to 2.4 4.change detail web Template. Moving css javascript to assets folder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,9 @@ android {
         if ('build' in runTasks) {
             vercode++
             versionProps['VERSION_CODE'] = vercode.toString()
+            versionProps.store(versionPropsFile.newWriter(), null)
         }
-        versionProps['BUILD_TIME'] = new Date().format("yyyyMMddHHmmss")
-        buildDate = " Build " + versionProps['BUILD_TIME']
-        versionProps.store(versionPropsFile.newWriter(), null)
+        buildDate = " Build " + new Date().format("yyyyMMddHHmmss")
 
         defaultConfig {
             versionCode vercode
@@ -140,7 +139,9 @@ dependencies {
     compile files('libs/gson-2.2.4.jar')
     compile project(':FloatingActionButton')
     compile project(':materialish-progress')
-    compile project(':PhotoView')
+    //compile project(':PhotoView')
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.0.12'
+    compile project(':SubSamplingScaleImageView')
     compile project(':discreteSeekBar')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.loopj.android:android-async-http:1.4.6'
