--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@
 
 buildscript {
     repositories {
-        maven {
-            url "http://maven.oschina.net/content/groups/public/"
-        }
+        jcenter()
+//        maven {
+//            url "http://maven.oschina.net/content/groups/public/"
+//        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
@@ -16,8 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url "http://maven.oschina.net/content/groups/public/"
-        }
+        jcenter()
+//        maven {
+//            url "http://maven.oschina.net/content/groups/public/"
+//        }
     }
 }
