add auto update crash log activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ywwxhz.cnbetareader" >
+    package="com.ywwxhz.cnbetareader">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -12,13 +12,13 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Basic" >
+        android:theme="@style/Theme.Basic">
         <activity
             android:name="com.ywwxhz.activitys.NewsDetailActivity"
             android:configChanges="screenSize|keyboardHidden|orientation" />
         <activity
             android:name="com.ywwxhz.activitys.TopicNewsListActivity"
-            android:configChanges="screenSize|keyboardHidden|orientation"/>
+            android:configChanges="screenSize|keyboardHidden|orientation" />
         <activity
             android:name="com.ywwxhz.activitys.ImageViewActivity"
             android:configChanges="screenSize|keyboardHidden|orientation" />
@@ -33,6 +33,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.ywwxhz.crash.activity.DefaultErrorActivity"
+            android:label="@string/crash_log"
+            android:process=":crash"
+            android:theme="@style/Theme.Basic.NoAnim" />
+
+        <receiver android:name="com.ywwxhz.update.UpdateHelper$UpdateReceiver" />
     </application>
 
 </manifest>
