--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 buildscript {
     repositories {
+        maven {
+            url "http://maven.oschina.net/content/groups/public/"
+        }
         jcenter()
-//        maven {
-//            url "http://maven.oschina.net/content/groups/public/"
-//        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:1.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,9 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "http://maven.oschina.net/content/groups/public/"
+        }
         jcenter()
-//        maven {
-//            url "http://maven.oschina.net/content/groups/public/"
-//        }
     }
 }
