修正一个拼写错误

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            applicationIdSuffix '.debug'
-            signingConfig signingConfigs.debug
+//            applicationIdSuffix '.debug'
+            signingConfig signingConfigs.release
         }
     }
 
