--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ android {
                 def outputFile = output.outputFile
                 if (outputFile != null && outputFile.name.endsWith('.apk')) {
                     def fileName = outputFile.name.replace(".apk"
-                            , "-${defaultConfig.versionName}-${defaultConfig.versionCode}.apk".replaceAll(" ", "-"))
+                            , "-${defaultConfig.versionName}-${buildDate}-${defaultConfig.versionCode}.apk".replaceAll(" ", "-"))
                     output.outputFile = new File(outputFile.parent, fileName)
                 }
             }
