--- a/SubSamplingScaleImageView/build.gradle
+++ b/SubSamplingScaleImageView/build.gradle
@@ -1,16 +1,18 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-annotations:'+project.ANDROID_SUPPORT_VERSION
 }
 
 android {
     compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
     buildToolsVersion project.ANDROID_BUILD_TOOL_VERSION
     defaultConfig {
-        minSdkVersion 10
+        minSdkVersion 15
         targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
     }
+
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -21,7 +23,16 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
         }
+
+        // Move the tests to tests/java, tests/res, etc...
         instrumentTest.setRoot('tests')
+
+        // Move the build types to build-types/<type>
+        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+        // This moves them out of them default location under src/<type>/... which would
+        // conflict with src/ being used by the main source set.
+        // Adding new build types or product flavors should be accompanied
+        // by a similar customization.
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
