--- a/SubSamplingScaleImageView/build.gradle
+++ b/SubSamplingScaleImageView/build.gradle
@@ -2,15 +2,15 @@ apply plugin: 'com.android.library'
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.support:support-annotations:'+project.ANDROID_SUPPORT_VERSION
+    compile 'com.android.support:support-annotations:23.1.1'
 }
 
 android {
-    compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
-    buildToolsVersion project.ANDROID_BUILD_TOOL_VERSION
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
+        targetSdkVersion 23
     }
 
     sourceSets {
