--- a/android-support-v4-preferencefragment/build.gradle
+++ b/android-support-v4-preferencefragment/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-    compile 'com.android.support:support-v4:'+project.ANDROID_SUPPORT_VERSION
+    compile 'com.android.support:support-v4:23.1.1'
 }
 
 android {
-    compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
-    buildToolsVersion project.ANDROID_BUILD_TOOL_VERSION
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 7
-        targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
+        targetSdkVersion 23
     }
 
     sourceSets {
