--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
-    buildToolsVersion project.ANDROID_BUILD_TOOL_VERSION
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     def buildDate
     def verName
@@ -11,7 +11,7 @@ android {
         applicationId "com.ywwxhz.cnbetareader"
         archivesBaseName = "cnBeta_Plus"
         minSdkVersion 15
-        targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
+        targetSdkVersion 23
         resConfigs "zh-rCN"
     }
 
@@ -129,11 +129,11 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.android.support:appcompat-v7:'+project.ANDROID_SUPPORT_VERSION
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile project(':android-support-v4-preferencefragment')
     compile project(':SwipeBackLayout')
     compile project(':SuperSaiyanScrollView')
     compile project(':FilterMenu')
-    compile project(':MaterialRipple')
+//    compile project(':MaterialRipple')
     compile 'com.google.code.gson:gson:2.5'
 }
