--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,11 @@
 
 buildscript {
     repositories {
-        maven {
-            url "http://maven.oschina.net/content/groups/public/"
-        }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,9 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url "http://maven.oschina.net/content/groups/public/"
-        }
         jcenter()
+        google()
     }
 }
