--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,12 +64,6 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-//        releasePreview {
-//            signingConfig signingConfigs.release
-//            minifyEnabled true
-//            shrinkResources true
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//        }
         debug {
 //            applicationIdSuffix '.debug'
             signingConfig signingConfigs.release
@@ -105,19 +99,9 @@ android {
     if ('b' in runTasks || 'build' in runTasks) {
         applicationVariants.all { variant ->
             variant.outputs.all {
-                outputFileName = "${variant.name}-${defaultConfig.versionName}-${buildDate}-${defaultConfig.versionCode}.apk"
+                outputFileName = "${archivesBaseName}-${variant.name}-${defaultConfig.versionName}-${buildDate}-${defaultConfig.versionCode}.apk"
             }
         }
-//        applicationVariants.all { variant ->
-//            variant.outputs.each { output ->
-//                def outputFile = output.outputFile
-//                if (outputFile != null && outputFile.name.endsWith('.apk')) {
-//                    def fileName = outputFile.name.replace(".apk"
-//                            , "-${defaultConfig.versionName}-${buildDate}-${defaultConfig.versionCode}.apk".replaceAll(" ", "-"))
-//                    output.outputFile = new File(outputFile.parent, fileName)
-//                }
-//            }
-//        }
     }
     lintOptions {
         abortOnError false
